# kovi-plugin-card-reader

./: Cargo.toml  README.md
src/: lib.rs
