
[package]
name = "kovi-plugin-card-reader"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Nawyjx <3373167460@qq.com>"]
description = "Kovi 的 SillyTavern 角色卡解析插件，支持 V2/V3 格式 PNG 解析与数据导出。"
categories = ["parsing", "encoding"]
repository = "https://github.com/araea/kovi-plugin-card-reader"
keywords = ["kovi", "kovi-plugin", "sillytavern", "character-card", "png"]

[dependencies]
kovi = ">= 0.12"
anyhow = "1.0"
base64 = "0.22"
serde_json = "1.0"
kovi-plugin-expand-napcat = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
